--- a/socially/package.json
+++ b/socially/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@imagekit/next": "^2.1.2",
+    "dotenv": "^17.2.1",
+    "imagekit": "^6.0.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
